# FastAPI_Duno

./: pyproject.toml
curso_fastapi_site/: app.py
tests/: test_app.py
